css for home page, login page, add some products

--- a/static/assests/nav.css
+++ b/static/assests/nav.css
@@ -1,9 +1,9 @@
-/* * {
+/*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   border: none;
-}
+}*/
 #AI_mail_ {
   width: 60px;
   height: 45px;
@@ -105,4 +105,4 @@
   left: 1827px;
   top: 82px;
   overflow: visible;
-} */
+} 
