--- a/ecommerce/templates/html/homeMain.html
+++ b/ecommerce/templates/html/homeMain.html
@@ -1,11 +1,13 @@
 
 {% extends "html/nav.html" %} {% load static %} {% block content %}
 {# It is for home page to show display of products. It contains images, description, title #}
+<img src="media/poster.png" alt="Poster" style='height: 100%; width: 100%; object-fit: contain'>
+<br> </br>
 <div class="row">
     {% for product in product %}
-            <div class="col-sm-4">
+            <div class="col-lg-4 col-md-6 mb-4">
 
-                <div class="card" style="width:100%; height:100%">
+                <div class="card h-100" >
                             {% if product.productimage_set.all %}
                                 {% for item in product.productimage_set.all %}
                                     {% if item.featured %}
