Edit product.html buttons

--- a/ecommerce/templates/html/product.html
+++ b/ecommerce/templates/html/product.html
@@ -1,6 +1,7 @@
 {% extends "html/nav.html" %} {% load static %} {% block content %}
 {# It is to custom an individual product  #}
 <head>
+    <link rel="stylesheet" href="{% static 'assests/signin.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head> 
 <div class="container my-5 py-5 z-depth-1">
@@ -144,12 +145,14 @@
 
             <div class="row mt-3">
               <div class="col-md-12 text-center text-md-left text-md-right">
-                <button class="btn btn-primary btn-rounded">
+                <button class="btn btn-block add-btn">
+                  <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i>
                   {% if not user.is_authenticated %} 
-                  <i class="fas fa-cart-plus mr-2" aria-hidden="true" href='{% url "signin" %}'></i>Sign In To Add</button>
+                  <span><a href='{% url "signin" %}'>Sign In to Add</a></span>
                   {%else%}
-                  <i class="fas fa-cart-plus mr-2" aria-hidden="true" href='{% url "update_cart" product.slug %}?qty=1'></i>Add To Cart</button>
+                  <span><a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a></span>
                   {%endif%}
+                </button> 
               </div>
             </div>
           </div>
