update new navigation bar

--- a/ecommerce/templates/html/nav.html
+++ b/ecommerce/templates/html/nav.html
@@ -30,65 +30,75 @@
     <link rel="stylesheet" href="{% static 'assests/nav.css' %}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
   </head>
-
   <body>
-{# Navigation bar start here #}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-{#  It is for brand #}
-          <a class="navbar-brand" href="#"> <img  id="c2a67771_2d74_4bb7_885d_834567"  src="{% static 'images/branch.png' %}"/> </a>
+        
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
 
-          {% comment %} search bar form {% endcomment %}
-                    <form class="form-inline my-2 my-lg-0" action='/s/'> 
-                    {% comment %} /s/ for searching {% endcomment %}
-                          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="search"  name='search'>{% comment %} name is to display the searching variable  {% endcomment %}
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-{#    It is for tabs #}
-           <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    {#    This one is not log in yet #}
-                       {% if not user.is_authenticated %} 
-                           {% comment %} <li class="nav-item active"> <a class="nav-link" href="#"> Home </a></li> {% endcomment %}
-                           <li class="nav-item">
-                            <a class="nav-link" href="{% url 'homeMain' %}">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a  class="nav-link"  href="{% url 'signin' %}">Sign In</a>
-                          </li>
-                          <li class="nav-item">
-                            <a  class="nav-link"  href="{% url 'register' %}">Register</a>
-                          </li>
-                        {#This one is after login #}
-                       {% else %}
-                           <li class="nav-item">
-                                <a class="nav-link" href="{% url 'about' %} ">About</a>
-                            </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="{% url 'homeMain' %}">Home</a>
-                          </li>
-                           <li class="nav-item">
-                                <a class="nav-link" href="{% url 'cart' %} ">Cart <span class="badge badge-primary">{% if not request.session.key  %}0{% else %}{{ request.session.key}}{% endif %}</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'add_address' %} ">New Address</a>
-                            </li>
-                           <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a> </li>
-                       {% endif %}
+        <div class='collapse-menu'>
+            <input type="checkbox" id="menu">
+            <label for="menu"><img src="{% static 'images/branch.png' %}"/></label>
+            <nav class='navbar-group'>
+                <ul class='navbar-main-group'>
+                    {% if not user.is_authenticated %} 
+                        <li class="navbar-part-group">
+                            <a href="{% url 'homeMain' %}">Home</a>
+                        </li>
+                        <li class="navbar-part-group">
+                            <a href="{% url 'register' %}">Register</a>
+                        </li>
+                        <li class="navbar-part-group"><a href="{% url 'signin' %}"> Sign In</a></li>
+                        <li class="navbar-part-group">
+                        <div class="dropdown">
+                            <a href="" class='dropbtn'>Search</a>
+                                      <div class="dropdown-content">
+                                          <form  action='/s/'> 
+                                                {% comment %} /s/ for searching {% endcomment %}
+                                                    <input  type="search" placeholder="Search" aria-label="search"  name='search'>{% comment %} name is to display the searching variable  {% endcomment %}
+                                                <button type="submit">Search</button>
+                                            </form>
+                                      </div>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="navbar-part-group"><a href="{% url 'homeMain' %}">Home</a></li>
+                    <li class="navbar-part-group">
+                        <div class="dropdown">
+                            <a href="" class='dropbtn'>Search</a>
+                                      <div class="dropdown-content">
+                                          <form  action='/s/'> 
+                                                {% comment %} /s/ for searching {% endcomment %}
+                                                    <input  type="search" placeholder="Search" aria-label="search"  name='search'>{% comment %} name is to display the searching variable  {% endcomment %}
+                                                <button type="submit">Search</button>
+                                            </form>
+                                      </div>
+                        </div>
+                    </li>
+                    <li class="navbar-part-group"><a  href="{% url 'about' %} ">About</a></li>
+                    <li class="navbar-part-group"><a href="{% url 'cart' %} ">Cart <span class="badge badge-primary">{% if not request.session.key  %}0{% else %}{{ request.session.key}}{% endif %}</span></a></li>
+                    <li class="navbar-part-group"><a href="{% url 'add_address' %} ">New Address</a></li>
+                    <li class="navbar-part-group"><a  href="{% url 'logout' %}">Logout</li>
+                    <li class="navbar-part-group"><a href=""></a></li>
+                    {% endif %}
                 </ul>
-           </div>
-    </nav>
-    {% comment %} category {% endcomment %}
-                    <form  action='/category/'> 
-                        <button type='submit' name='category' value="Foods">Foods</button>
-                        <button type='submit' name='category' value="Fruits">Fruits</button>
-                        <button type='submit' name='category' value="Drinks">Drinks</button>
-                        <button type='submit' name='category' value="Others">Others</button>
-                    </form>
-    {#    Status of after actions. E.g: register: register sucessfully #}
+               
+                   
+                  
+                
+{% comment %} category {% endcomment %}
+<form  action='/category/'> 
+    <button type='submit' name='category' value="Foods">Foods</button>
+    <button type='submit' name='category' value="Fruits">Fruits</button>
+    <button type='submit' name='category' value="Drinks">Drinks</button>
+    <button type='submit' name='category' value="Others">Others</button>
+</form> 
+            </nav>
+        </div>
+    
+                    
+    {#    Status of after actions. E.g: register: register sucessfully #} 
+
+
+
     {% if messages %} {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">{{message}}</div>
 
