Fix the price for unique product page.

--- a/ecommerce/templates/html/product.html
+++ b/ecommerce/templates/html/product.html
@@ -63,7 +63,7 @@
           <!--price-->
           <h3 class="h3-responsive text-center text-md-left mb-5 ml-xl-0 ml-4">
             <span class="black-text font-weight-bold">
-              <strong>{{product.sellPrice}}</strong>
+              <strong>${{product.salePrice}}</strong>
             </span>
           </h3>
           <!--end price-->
