--- a/ecommerce/templates/html/nav.html
+++ b/ecommerce/templates/html/nav.html
@@ -47,6 +47,7 @@
                             <a href="{% url 'register' %}">Register</a>
                         </li>
                         <li class="navbar-part-group"><a href="{% url 'signin' %}"> Sign In</a></li>
+                        <li class="navbar-part-group"><a href="{% url 'contact' %}"> Contact</a></li>
                         <li class="navbar-part-group">
                         <div class="dropdown">
                             <a href="" class='dropbtn'>Search</a>
@@ -76,6 +77,7 @@
                     <li class="navbar-part-group"><a  href="{% url 'about' %} ">About</a></li>
                     <li class="navbar-part-group"><a href="{% url 'cart' %} ">Cart <span class="badge badge-primary">{% if not request.session.key  %}0{% else %}{{ request.session.key}}{% endif %}</span></a></li>
                     <li class="navbar-part-group"><a href="{% url 'add_address' %} ">New Address</a></li>
+                    <li class="navbar-part-group"><a href="{% url 'contact' %}"> Contact</a></li>
                     <li class="navbar-part-group"><a  href="{% url 'logout' %}">Logout</li>
                     <li class="navbar-part-group"><a href=""></a></li>
                     {% endif %}
