--- a/ecommerce/templates/html/contact.html
+++ b/ecommerce/templates/html/contact.html
@@ -1,8 +1,8 @@
 {% extends "html/nav.html" %} {% load static %} {% block content %}
 <form method="post" >
-    {%csrf_token%}
+    {% csrf_token%}
     {{form.as_p}}
-    <a'><input type=submit value='send'></a>
+    <a><input type="submit" value='send'></a>
    
 </form>
-{%endblock content%}
+{% endblock content %}
