--- a/ecommerce/templates/checkout/checkout.html
+++ b/ecommerce/templates/checkout/checkout.html
@@ -1,84 +1,82 @@
 {% extends 'html/nav.html' %}  {% load static %}{% block content %}
 <head>
-    <link rel="stylesheet" href="{% static "assests/checkout.css" %}">
+        <link rel="stylesheet" href="{% static "assests/checkout.css" %}">
 </head>
 <body>
-
-
     {% if address1 == False %}
                 <h4 class="text-center">{{ message }}</h4>
                 <form action="{%  url "checkout" %}" method="POST">
-                    {% csrf_token %}                   
-                     <span><h4>Address</h4><input class="form-control text-center" name='address' placeholder='Your address' value='{{ address.address }}' type='text' required></span>
-                    <span><h4>City</h4><input class="form-control text-center" name='city' placeholder='Your City' value='{{ address.city }}' type="text" required></span>
-                    <span><h4>State</h4>
-                    <select style=" text-align: center; text-align-last: center;" class="form-control text-center" id="sel"  name="state" >
-                                                                    <option value="AL">Alabama</option>
-                                                                    <option value="AK">Alaska</option>
-                                                                    <option value="AZ">Arizona</option>
-                                                                    <option value="AR">Arkansas</option>
-                                                                    <option value="CA">California</option>
-                                                                    <option value="CO">Colorado</option>
-                                                                    <option value="CT">Connecticut</option>
-                                                                    <option value="DE">Delaware</option>                                                                    
-                                                                    <option value="DC">District Of Columbia</option>
-                                                                    <option value="FL">Florida</option>
-                                                                    <option value="GA">Georgia</option>
-                                                                    <option value="HI">Hawaii</option>
-                                                                    <option value="ID">Idaho</option>
-                                                                    <option value="IL">Illinois</option>
-                                                                    <option value="IN">Indiana</option>
-                                                                    <option value="IA">Iowa</option>
-                                                                    <option value="KS">Kansas</option>
-                                                                    <option value="KY">Kentucky</option>
-                                                                    <option value="LA">Louisiana</option>
-                                                                    <option value="ME">Maine</option>
-                                                                    <option value="MD">Maryland</option>
-                                                                    <option value="MA">Massachusetts</option>
-                                                                    <option value="MI">Michigan</option>
-                                                                    <option value="MN">Minnesota</option>
-                                                                    <option value="MS">Mississippi</option>
-                                                                    <option value="MO">Missouri</option>
-                                                                    <option value="MT">Montana</option>
-                                                                    <option value="NE">Nebraska</option>
-                                                                    <option value="NV">Nevada</option>
-                                                                    <option value="NH">New Hampshire</option>
-                                                                    <option value="NJ">New Jersey</option>
-                                                                    <option value="NM">New Mexico</option>
-                                                                    <option value="NY">New York</option>
-                                                                    <option value="NC">North Carolina</option>
-                                                                    <option value="ND">North Dakota</option>
-                                                                    <option value="OH">Ohio</option>
-                                                                    <option value="OK">Oklahoma</option>
-                                                                    <option value="OR">Oregon</option>
-                                                                    <option value="PA">Pennsylvania</option>
-                                                                    <option value="RI">Rhode Island</option>
-                                                                    <option value="SC">South Carolina</option>
-                                                                    <option value="SD">South Dakota</option>
-                                                                    <option value="TN">Tennessee</option>
-                                                                    <option value="TX">Texas</option>
-                                                                    <option value="UT">Utah</option>
-                                                                    <option value="VT">Vermont</option>
-                                                                    <option value="VA">Virginia</option>
-                                                                    <option value="WA">Washington</option>
-                                                                    <option value="WV">West Virginia</option>
-                                                                    <option value="WI">Wisconsin</option>
-                                                                    <option value="WY">Wyoming</option>
-                                                                    
-                    </select>	
-                                                            </span>
-                                                            <span><h4>Zipcode</h4><input  class="form-control text-center" name="zipcode" type="text" inputmode="numeric" pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$" placeholder="Your ZipCode" value='{{ address.zipcode }}' required></span>
-                                                            <span><h4>Phone Number</h4><input  class="form-control text-center" type="tel" name="phone_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="999-999-9999" value='{{ address.phone_number }}'></span>
+                        {% csrf_token %}                   
+                        <span><h4>Address</h4><input class="form-control text-center" name='address' placeholder='Your address' value='{{ address.address }}' type='text' required></span>
+                        <span><h4>City</h4><input class="form-control text-center" name='city' placeholder='Your City' value='{{ address.city }}' type="text" required></span>
+                        <span>
+                                <h4>State</h4>
+                                <select style=" text-align: center; text-align-last: center;" class="form-control text-center" id="sel"  name="state" >
+                                                                <option value="AL">Alabama</option>
+                                                                <option value="AK">Alaska</option>
+                                                                <option value="AZ">Arizona</option>
+                                                                <option value="AR">Arkansas</option>
+                                                                <option value="CA">California</option>
+                                                                <option value="CO">Colorado</option>
+                                                                <option value="CT">Connecticut</option>
+                                                                <option value="DE">Delaware</option>                                                                    
+                                                                <option value="DC">District Of Columbia</option>
+                                                                <option value="FL">Florida</option>
+                                                                <option value="GA">Georgia</option>
+                                                                <option value="HI">Hawaii</option>
+                                                                <option value="ID">Idaho</option>
+                                                                <option value="IL">Illinois</option>
+                                                                <option value="IN">Indiana</option>
+                                                                <option value="IA">Iowa</option>
+                                                                <option value="KS">Kansas</option>
+                                                                <option value="KY">Kentucky</option>
+                                                                <option value="LA">Louisiana</option>
+                                                                <option value="ME">Maine</option>
+                                                                <option value="MD">Maryland</option>
+                                                                <option value="MA">Massachusetts</option>
+                                                                <option value="MI">Michigan</option>
+                                                                <option value="MN">Minnesota</option>
+                                                                <option value="MS">Mississippi</option>
+                                                                <option value="MO">Missouri</option>
+                                                                <option value="MT">Montana</option>
+                                                                <option value="NE">Nebraska</option>
+                                                                <option value="NV">Nevada</option>
+                                                                <option value="NH">New Hampshire</option>
+                                                                <option value="NJ">New Jersey</option>
+                                                                <option value="NM">New Mexico</option>
+                                                                <option value="NY">New York</option>
+                                                                <option value="NC">North Carolina</option>
+                                                                <option value="ND">North Dakota</option>
+                                                                <option value="OH">Ohio</option>
+                                                                <option value="OK">Oklahoma</option>
+                                                                <option value="OR">Oregon</option>
+                                                                <option value="PA">Pennsylvania</option>
+                                                                <option value="RI">Rhode Island</option>
+                                                                <option value="SC">South Carolina</option>
+                                                                <option value="SD">South Dakota</option>
+                                                                <option value="TN">Tennessee</option>
+                                                                <option value="TX">Texas</option>
+                                                                <option value="UT">Utah</option>
+                                                                <option value="VT">Vermont</option>
+                                                                <option value="VA">Virginia</option>
+                                                                <option value="WA">Washington</option>
+                                                                <option value="WV">West Virginia</option>
+                                                                <option value="WI">Wisconsin</option>
+                                                                <option value="WY">Wyoming</option>
+                                </select>	
+                        </span>
+                        <span><h4>Zipcode</h4><input  class="form-control text-center" name="zipcode" type="text" inputmode="numeric" pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$" placeholder="Your ZipCode" value='{{ address.zipcode }}' required></span>
+                        <span><h4>Phone Number</h4><input  class="form-control text-center" type="tel" name="phone_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="999-999-9999" value='{{ address.phone_number }}'></span>
                                                             {% comment %} <span><h4>Default Addresss</h4><input  name="billing" type="checkbox" checked ></span> {% endcomment %}
-                                                            <br>
-                                                            <span><input  class="form-control text-center" type="submit" class="btn btn-default" value='Save'></span>
-                                                    </form>
+                        <br>
+                        <span><input  class="form-control text-center" type="submit" class="btn btn-default" value='Save'></span>
+                        </form>
     {% else %}
-    <div id="text-h1">
+<div id="text-h1">
         <h1 class="text-center">AIRCART CHECKOUT</h1>
-    </div>
-    <div class="container">
-    <div class="row">
+</div>
+<div class="container">
+<div class="row">
         <section class="column-1">
             <div class="row1-left">
                 <h2 class="text-center">Shipping Information </h2>
@@ -99,8 +97,8 @@
                                                     <form action="{%  url "checkout" %}" method="POST">
                                                                     {% csrf_token %}
                                                             {% comment %} <span><h4>Address</h4><input class="form-control text-center" name='address' placeholder='Your address' value='{{address.shipping.address}}' type="text" required></span> {% endcomment %}
-                                                            <span><h4>Address</h4><input class="form-control text-center" name='address' placeholder='Your address' value='{{ addressDefault.address }}' type='text' required></span>
-                                                            <span><h4>City</h4><input class="form-control text-center" name='city' placeholder='Your City' value='{{ addressDefault.city }}' type="text" required></span>
+                                                            <span><h4>Address</h4><input class="form-control text-center" name='address' placeholder='Your address' value='{{ address.address }}' type='text' required></span>
+                                                            <span><h4>City</h4><input class="form-control text-center" name='city' placeholder='Your City' value='{{ address.city }}' type="text" required></span>
                                                             <span><h4>State</h4>
                                                             <select style=" text-align: center; text-align-last: center;" class="form-control text-center" id="sel"  name="state" >
                                                                     <option value="AL">Alabama</option>
@@ -156,8 +154,8 @@
                                                                     <option value="WY">Wyoming</option>
                                                             </select>	
                                                             </span>
-                                                            <span><h4>Zipcode</h4><input  class="form-control text-center" name="zipcode" type="text" inputmode="numeric" pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$" placeholder="Your ZipCode" value='{{ addressDefault.zipcode }}' required></span>
-                                                            <span><h4>Phone Number</h4><input  class="form-control text-center" type="tel" name="phone_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="999-999-9999" value='{{ addressDefault.phone_number }}'></span>
+                                                            <span><h4>Zipcode</h4><input  class="form-control text-center" name="zipcode" type="text" inputmode="numeric" pattern="^(?(^00000(|-0000))|(\d{5}(|-\d{4})))$" placeholder="Your ZipCode" value='{{ address.zipcode }}' required></span>
+                                                            <span><h4>Phone Number</h4><input  class="form-control text-center" type="tel" name="phone_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="999-999-9999" value='{{ address.phone_number }}'></span>
                                                             {% comment %} <span><h4>Default Addresss</h4><input  name="billing" type="checkbox" checked ></span> {% endcomment %}
                                                             <br>
                                                             <span><input  class="form-control text-center" type="submit" class="btn btn-default" value='Save'></span>
@@ -339,7 +337,7 @@ Remember want to activate should get the client-id and copy it to line 36 at "cl
 <script>
         var obj = document.getElementById("sel");
         for(i=0; i<obj.options.length; i++){
-        if(obj.options[i].value == '{{addressDefault.state}}' ){
+        if(obj.options[i].value == '{{address.state}}' ){
                 obj.selectedIndex = i;
         }
         }
