--- a/static/assests/cart.css
+++ b/static/assests/cart.css
@@ -2,12 +2,21 @@
     padding: 0; 
     margin: 0; 
 }
+
+
   /* Desktops and laptops ----------- */
 @media only screen 
 and (min-width :975px) {
   .container{
     position: relative;
   }
+  #message-empty{
+    margin-top: 100px;
+    text-align: center;
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+  }
+  
   .container table{
     margin-top: 100px ;
     margin-left:50px;
