--- a/ecommerce/templates/html/category.html
+++ b/ecommerce/templates/html/category.html
@@ -1,6 +1,6 @@
 
 {% extends "html/nav.html" %} {% load static %}{% block content %}
-<body style="max-width: 100%; overflow-x: hidden;">
+<body style="max-width: 100%;">
     {% if category %}
     <table class="table">
         <thead>
