--- a/ecommerce/templates/html/product.html
+++ b/ecommerce/templates/html/product.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{% static 'assests/product.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head> 
-<body style=" max-width: 100%; overflow-x: hidden;">
+<body style=" max-width: 100%;">
   <div class="container">
   <div class="row">
     <!--categrory-->
