--- a/ecommerce/templates/html/signin.html
+++ b/ecommerce/templates/html/signin.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head> 
 
-<body style="overflow: auto;  max-width: 100%; overflow-x: hidden;">
+<body style="overflow: auto;  max-width: 100%; ">
   <main>
     <div class="container-fluid">
       <div class="row">
