--- a/static/assests/nav.css
+++ b/static/assests/nav.css
@@ -1,153 +1,140 @@
-*{
-  padding: 0; 
-  margin: 0; 
+* {
+  padding: 0;
+  margin: 0;
 }
 /* Desktops and laptops ----------- */
-@media only screen 
-and (min-width :975px) {
-    *{
-        padding: 0; 
-        margin: 0; 
-    }
-    .navbar-nav li {
+@media only screen and (min-width: 975px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  .navbar-nav li {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px; 
+    font-size: 20px;
     position: relative;
     list-style: none;
     display: inline-block;
     margin-left: 130px;
-    }
-    .navbar-part-group a{
-      font-size: 20px; 
-      color:black;
-      text-decoration: none;
-      border-bottom: 3px solid transparent;
-    }
-      
-    .navbar-part-group a:hover {
-        border-bottom: 3px solid black;
-        text-decoration: none;
-      }
-      /* Change the background color of the dropdown button when the dropdown content is shown */
-      .search{
-        float: right; 
-      }
-      .search-ip{
-        border: none;
-        box-shadow: 0 8px 6px -6px black; 
-      
-      
-      }
-      .search-btn{
-        visibility: hidden;
-        cursor:pointer;
-      }
-      .search-ip:hover{
-        box-shadow: 0 8px 6px -6px grey;
-        cursor: pointer;
-      
-      }
-      .search-ip:focus{
-        outline: 0;
-      
-      }
-      .navbar-toggler-icon{
-        box-shadow: black 3px 3px;
+  }
+  .navbar-part-group a {
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    border-bottom: 3px solid transparent;
+  }
 
-      }
-      .navbar-toggler-icon:focus{
-        outline: none;
-      }
-      .navbar-toggler{
-        border: none ;
-        box-shadow: black;
-        width: 30px;
-        height: 30px;
+  .navbar-part-group a:hover {
+    border-bottom: 3px solid black;
+    text-decoration: none;
+  }
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .search {
+    float: right;
+  }
+  .search-ip {
+    border: none;
+    box-shadow: 0 8px 6px -6px black;
+  }
+  .search-btn {
+    visibility: hidden;
+    cursor: pointer;
+  }
+  .search-ip:hover {
+    box-shadow: 0 8px 6px -6px grey;
+    cursor: pointer;
+  }
+  .search-ip:focus {
+    outline: 0;
+  }
+  .navbar-toggler-icon {
+    box-shadow: black 3px 3px;
+  }
+  .navbar-toggler-icon:focus {
+    outline: none;
+  }
+  .navbar-toggler {
+    border: none;
+    box-shadow: black;
+    width: 30px;
+    height: 30px;
+  }
+  .navbar-toggler:focus {
+    outline: none;
+  }
+  .navbar-toggler:hover {
+    box-shadow: 3px 3px black;
+  }
+}
 
-      }
-      .navbar-toggler:focus{
-        outline: none;
-      }
-      .navbar-toggler:hover{
-        box-shadow: 3px  3px black;
-     }
-    }
-      
+@media only screen and (max-width: 975px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
 
-@media only screen 
-and (max-width :975px) {
-    *{
-        padding: 0; 
-        margin: 0; 
-    }
-
-    .navbar-group{
-  max-height: 0;
-   overflow: hidden;
-    }
-    .navbar-part-group  {
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 20px; 
-  font-weight: normal;
-   position: relative;
-   list-style: none;
-   padding: 0 0 0 50px;
-
-   }
-   .navbar-part-group a{
-    display:block;
+  .navbar-group {
+    max-height: 0;
+    overflow: hidden;
+  }
+  .navbar-part-group {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    font-weight: normal;
+    position: relative;
+    list-style: none;
+    padding: 0 0 0 50px;
+  }
+  .navbar-part-group a {
+    display: block;
     padding: 10px;
     text-decoration: none;
     color: black;
-}
-.navbar-part-group a:hover{
-  border-bottom:1px solid black;
-  text-decoration: none;
-}
+  }
+  .navbar-part-group a:hover {
+    border-bottom: 1px solid black;
+    text-decoration: none;
+  }
 
-.search{
-  border: none;
-  size: 30px;
-  text-align: center;
-  float: right;
-}
-.search-ip{
-  border: none;
-  border-radius: 20px; 
-  box-shadow: 5px 5px 6px -5px grey; 
-  text-align: center;
+  .search {
+    border: none;
+    size: 30px;
+    text-align: center;
+    float: right;
+  }
+  .search-ip {
+    border: none;
+    border-radius: 20px;
+    box-shadow: 5px 5px 6px -5px grey;
+    text-align: center;
+  }
+  .search-btn {
+    visibility: hidden;
+    cursor: pointer;
+  }
 
-}
-.search-btn{
-  visibility: hidden;
-  cursor:pointer;
-}
-
-.search-ip:hover{
-  box-shadow: 0 8px 6px -6px grey;
-  cursor: pointer;
-}
-.search-ip:focus{
-  outline: 0;
-}
-.navbar-toggler-icon{
-  box-shadow: black 3px 3px;
-
-}
-.navbar-toggler-icon:focus{
-  outline: none;
-}
-.navbar-toggler{
-  border: none ;
-  box-shadow: black;
-  width: 30px;
-  height: 30px;
-
-}
-.navbar-toggler:focus{
-  outline: none;
-}
-.navbar-toggler:hover{
-  box-shadow: 3px  3px black;
-}
+  .search-ip:hover {
+    box-shadow: 0 8px 6px -6px grey;
+    cursor: pointer;
+  }
+  .search-ip:focus {
+    outline: 0;
+  }
+  .navbar-toggler-icon {
+    box-shadow: black 3px 3px;
+  }
+  .navbar-toggler-icon:focus {
+    outline: none;
+  }
+  .navbar-toggler {
+    border: none;
+    box-shadow: black;
+    width: 30px;
+    height: 30px;
+  }
+  .navbar-toggler:focus {
+    outline: none;
+  }
+  .navbar-toggler:hover {
+    box-shadow: 3px 3px black;
+  }
 }
