--- a/static/assests/cart.css
+++ b/static/assests/cart.css
@@ -1,26 +1,29 @@
-*{
-    padding: 0; 
-    margin: 0; 
-}
-
 
   /* Desktops and laptops ----------- */
-@media only screen 
-and (min-width :975px) {
+@media only screen and (min-width :894px) {
+*{
+    padding: 0;
+    margin: 0;
+}
   .container{
     position: relative;
   }
-  #message-empty{
-    margin-top: 100px;
-    text-align: center;
+  .empty{
     border: solid 1px black;
     box-shadow: 3px 3px black;
+    height: 150px;
+    width: 900px;
+    margin-top: 100px;
+    text-align: center;
+    float: right;
   }
-  
+  #message-empty{
+  padding: 10px 10px;
+  }
   .container table{
-    margin-top: 100px ;
+    margin-top: 50px;
     margin-left:50px;
-    width:975px;
+    width:700px;
   }
   .table-head{
     box-shadow: 3px 3px 3px 3px black;
@@ -94,18 +97,17 @@ and (min-width :975px) {
     margin:10px 38%;
     font-size: 20px;
   }
-
-
 }
 @media only screen 
-and (max-width :975px) and (min-width: 400px){
+and (max-width :894px) and (min-width: 400px){
   .container{
     position: relative;
   }
   .container table{
     text-align: center;
     font-size: 10px;
-
+    margin: 30px 50px;
+    width: 250px;
   }
   .table-head{
     box-shadow: 3px 3px 3px 3px black;
@@ -115,8 +117,7 @@ and (max-width :975px) and (min-width: 400px){
     border: 1px solid grey; 
     box-shadow: 2px 3px grey;
   }
-  
-    
+
     .material-icons-delete:hover, .material-icons-delete:focus{
     box-shadow: 0 0.5em 0.5em -0.4em transparent;
     transform: translateY(-0.25em);
@@ -147,9 +148,6 @@ and (max-width :975px) and (min-width: 400px){
       box-shadow: 0 0.5em 0.5em -0.4em black;
       transform: translateY(-0.25em);
       }
-    
-
-
     #remove-btn a{
       text-decoration: none;
       font-size: 30px;
@@ -183,5 +181,15 @@ and (max-width :975px) and (min-width: 400px){
     margin:10px 38%;
     font-size: 20px;
   }
-    
+  .empty{
+    border: solid 1px black;
+    box-shadow: 3px 3px black;
+    height: 150px;
+    width: 1000px;
+    margin-top: 100px;
+    text-align: center;
+  }
+  #message-empty{
+  padding: 10px 10px;
+  }
 }
